--- a/style.css
+++ b/style.css
@@ -443,6 +443,21 @@ footer img {
   height: 50px;
   border-top: 3px solid rgb(122, 122, 129);
 }
+
+/* Shop page */
+#shop-hero{
+  background-image: url(./imges/banner/b1.jpg);
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#shop-hero h2,#shop-hero p{
+  color: #fff;
+}
+
 @media only screen and (max-width: 799px) {
   #navbar {
     display: none;
