--- a/style.css
+++ b/style.css
@@ -540,6 +540,60 @@ footer img {
   letter-spacing: 5px;
 }
 
+/* Blog page */
+#blog-hero {
+  background-image: url(./imges/banner/b19.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#blog-hero h2,
+#blog-hero p {
+  color: #fff;
+}
+
+#blogs .blog-box {
+  display: flex;
+  position: relative;
+  margin: 150px 150px 0 150px;
+}
+#blogs .blog-box .imgWrapper {
+  width: 50%;
+  margin-right: 50px;
+}
+#blogs .blog-box .imgWrapper img {
+  height: 300px;
+  width: 100%;
+}
+
+#blogs .blog-box .blog-deatels {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 50%;
+}
+#blogs .blog-box .blog-deatels div {
+  font-weight: 900;
+  font-size: medium;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+
+#blogs .blog-box .blog-deatels div:hover {
+  color: #088178;
+}
+#blogs .blog-box h1 {
+  font-size: 70px;
+  position: absolute;
+  font-weight: 700;
+  color: #c2c4ce;
+  top: -45px;
+  z-index: -9;
+}
 @media only screen and (max-width: 799px) {
   #navbar {
     display: none;
@@ -587,6 +641,12 @@ footer img {
     width: 80%;
     margin-left: 0px;
   }
+  /* Blog page  */
+  #blogs .blog-box {
+    display: flex;
+    position: relative;
+    margin: 50px 10px 20px 10px;
+  }
   @media only screen and (max-width: 499px) {
     h2 {
       font-size: 32px;
@@ -625,6 +685,22 @@ footer img {
     .single-title-desc {
       width: 94%;
       margin-left: 0px;
+    }
+    #blogs .blog-box {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      margin: 70px 0px 70px 0px;
+    }
+    #blogs .blog-box .blog-deatels {
+      width: 90%;
+    }
+    #blogs .blog-box .imgWrapper img {
+      height: 300px;
+      width: 150%;
+      margin-left: -30px;
     }
   }
 }
