--- a/style.css
+++ b/style.css
@@ -637,7 +637,7 @@ footer img {
 }
 /* Vvvvvvvvideo */
 #about-video {
-text-align: center;
+  text-align: center;
 }
 
 #about-video .WrapperVideo {
@@ -649,8 +649,121 @@ text-align: center;
   border-radius: 20px;
 }
 
-#contact{
-  
+/* Contact page */
+
+#contact {
+  display: flex;
+}
+
+#contact .contact-deatels {
+  width: 45%;
+}
+
+#contact h2 {
+  font-size: 22px;
+  line-height: 25px;
+}
+#contact h3 {
+  margin-top: 30px;
+}
+
+#contact li {
+  margin-top: 15px;
+  list-style: none;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+#contact li i {
+  margin-right: 20px;
+}
+
+#contact .contact-map {
+  width: 55%;
+}
+#contact .contact-map iframe {
+  width: 100%;
+  height: 400px;
+}
+
+#contact-form {
+  display: flex;
+  align-items: flex-start;
+  border: 2px solid #d8dce7;
+  margin: 30px;
+  padding: 40px;
+}
+
+#contact-form form {
+  width: 65%;
+  height: 90vh;
+}
+#contact-form form h2 {
+  font-size: 25px;
+}
+
+#contact-form form input,
+#contact-form form textarea {
+  width: 100%;
+  padding: 20px 25px;
+  margin-bottom: 30px;
+  outline: none;
+}
+
+#contact-form form button {
+  background: #088178;
+  color: #fff;
+  cursor: pointer;
+}
+
+#contact-form .contact-form-deteals {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#contact-form .contact-form-deteals .contactimgWrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 100px;
+}
+#contact-form .contact-form-deteals .contactimgWrapper img {
+  width: 65px;
+  height: 65px;
+  margin-right: 20px;
+}
+#contact-form .contact-form-deteals .contactimgWrapper span {
+  display: block;
+  font-size: large;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 900px) {
+  #contact {
+    display: flex;
+    flex-direction: column;
+  }
+  #contact .contact-deatels {
+    width: 100%;
+  }
+  #contact .contact-map {
+    width: 100%;
+  }
+  #contact-form {
+    height: fit-content;
+    flex-direction: column;
+  }
+  #contact-form form {
+    width: 100%;
+    height: 90vh;
+  }
+  #contact-form .contact-form-deteals {
+    width: 100%;
+  }
+  #contact-form .contact-form-deteals {
+   margin-top: 180px;
+}
 }
 
 @media only screen and (max-width: 799px) {
@@ -723,60 +836,60 @@ text-align: center;
   #about-video .WrapperVideo video {
     width: 93%;
   }
-  @media only screen and (max-width: 499px) {
-    h2 {
-      font-size: 32px;
-      line-height: 44px;
-      color: #222;
-    }
-    h1 {
-      font-size: 42px;
-      line-height: 45px;
-      color: #222;
-    }
-    p {
-      font-size: 14px;
-      color: #465b52;
-      margin: 15px 0 20px 0;
-    }
-    .section-p1 {
-      padding: 10px 20px;
-    }
-    #banner3 {
-      display: flex;
-      justify-content: space-evenly;
-      flex-wrap: wrap;
-      padding: 0 40px;
-    }
-    #newsletter .form {
-      width: 100%;
-    }
-    /* Single page */
-    .section-p1 {
-      padding: 5px 10px;
-    }
-    #single-product .single-product-image-wrapper {
-      width: 90%;
-    }
-    .single-title-desc {
-      width: 94%;
-      margin-left: 0px;
-    }
-    /* Blog page */
-    #blogs .blog-box {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      margin: 70px 0px 70px 0px;
-    }
-    #blogs .blog-box .blog-deatels {
-      width: 90%;
-    }
-    #blogs .blog-box .imgWrapper {
-      width: 90%;
-      margin-right: 0px;
-    }
+}
+@media only screen and (max-width: 499px) {
+  h2 {
+    font-size: 32px;
+    line-height: 44px;
+    color: #222;
+  }
+  h1 {
+    font-size: 42px;
+    line-height: 45px;
+    color: #222;
+  }
+  p {
+    font-size: 14px;
+    color: #465b52;
+    margin: 15px 0 20px 0;
+  }
+  .section-p1 {
+    padding: 10px 20px;
+  }
+  #banner3 {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 0 40px;
+  }
+  #newsletter .form {
+    width: 100%;
+  }
+  /* Single page */
+  .section-p1 {
+    padding: 5px 10px;
+  }
+  #single-product .single-product-image-wrapper {
+    width: 90%;
+  }
+  .single-title-desc {
+    width: 94%;
+    margin-left: 0px;
+  }
+  /* Blog page */
+  #blogs .blog-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 70px 0px 70px 0px;
+  }
+  #blogs .blog-box .blog-deatels {
+    width: 90%;
+  }
+  #blogs .blog-box .imgWrapper {
+    width: 90%;
+    margin-right: 0px;
   }
 }
