--- a/style.css
+++ b/style.css
@@ -929,13 +929,16 @@ footer img {
     flex-direction: column;
   }
   #coupon .coupon-form {
-     width: 100%;
-     margin-bottom: 30px;
-   } 
+    width: 100%;
+    margin-bottom: 30px;
+  }
   #coupon .coupon-form input {
     width: 60%;
     padding: 13px 5px;
     outline: none;
+  }
+  #coupon .coupon-table {
+    width: 100%;
   }
 }
 @media only screen and (max-width: 499px) {
